Fix findbug errors in distributedlog
* remove bunch dead variables
* make variables final
* implement serializable for comparator

RB_ID=680876